@@ -24,6 +24,11 @@ placeholder.owner: 'Owner'
 placeholder.admin: 'Admin'
 placeholder.default: 'Default'
 
+# Used prefixing team chat messages, for no prefix, leave blank 
+prefix.owner: ' **'
+prefix.admin: ' *'
+prefix.default: ''
+
 # for /team create <name>
 create.exists: '&6That team already exists'
 create.success: '&6Your team has been created'
